feat(v0.7.0): Add testing infrastructure, React dashboard, and NeurIPS exports
## Testing Infrastructure
- Add tests/ directory with pytest fixtures (conftest.py)
- Add test_workflow_mock.py for end-to-end workflow tests
- Add test_method_selection.py for selection mechanics
- Add test_knowledge_transfer.py for transfer verification
- Add mock_news.json fixture

## Backtesting Enhancements
- Extend BacktestEngine with run_population_backtest() method
- Integrate SelectorWorkflow with real OrderExecutor
- Add market context derivation from price data

## React Visualization Dashboard
- Create Next.js dashboard with Tailwind CSS dark theme
- Add AgentPopulation component for 20-agent grid view
- Add MethodInventory heatmap for selection patterns
- Add LearningTimeline with PnL charts and transfer markers
- Add PipelineFlow animated visualization
- Add ReflectionPanel for agent reasoning display
- Add KnowledgeTransfer timeline component
- Add PerformanceChart with cumulative returns

## API Backend
- Add FastAPI server (trading_agents/api/server.py)
- Add REST endpoints for experiments and iterations
- Add WebSocket support for live updates

## Paper Trading
- Add scheduler.py for 4-hour iteration scheduling
- Support continuous mode with Bybit testnet

## NeurIPS Export
- Add neurips_export.py for publication-ready outputs
- Generate learning curve, method popularity, diversity figures
- Generate LaTeX and CSV performance tables
- Export agent reasoning traces for appendix

## CLI Commands
- Add 'backtest' command for population backtesting
- Add 'export' command for NeurIPS figure generation
- Add 'api' command for dashboard server

## Documentation
- Update README with new project structure and commands
- Update system_walkthrough.tex with dashboard usage
- Update neurips_2026.tex with implementation details

--- a/paper/neurips_2026.tex
+++ b/paper/neurips_2026.tex
@@ -387,6 +387,9 @@ We compare against:
     \item LLM: GPT-4o-mini for trader decisions
     \item Training: 1,000 iterations on 2022-2023 data
     \item Testing: 2024 data (out-of-sample)
+    \item Backtesting: Population-based backtesting with real OrderExecutor
+    \item Logging: Structured JSONL format for reproducibility
+    \item Visualization: React dashboard with real-time WebSocket updates
 \end{itemize}
 
 %==============================================================================
